k8s/prod/apps/prod-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleetops-prod-routes
  namespace: fleetops-prod
spec:
  parentRefs:
    - name: fleetops-gateway
      namespace: fleetops-platform
  hostnames:
    - "prod.98.86.98.79.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: fleetops-auth-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/vehicles
      backendRefs:
        - name: fleetops-vehicle-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/tasks
      backendRefs:
        - name: fleetops-maintenance-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/requests
      backendRefs:
        - name: fleetops-request-service
          port: 8080
    - matches:
        - path:
            type: Exact
            value: /healthz
      backendRefs:
        - name: fleetops-frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fleetops-frontend
          port: 80
